k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: librescript
  labels:
    name: librescript
    app: librescript
